<resources>

    <string name="app_name">Android Final</string>
    <string name="ButtonText">Button</string>
    <string name="authors">Author: Mohamed Attia</string>
    <string name="recipeSearchButtonText">Search</string>
    <string name="recipeSearchEditText">What are you looking for?</string>
    <string name="applicationName">Android App </string>
    <string name="recipeMainButton">Search Recipes!</string>
    <string name="recipeVersion">Ver 0.3 beta</string>
    <string name="recipeapp">Recipe API</string>
    <string name="information"> Information</string>
    <string name="mainHelp">Click button to start Searching! Or click the star on the toolbar to go directly to your Favorites</string>
    <string name="searchHelp">Input the ingredient you want to search and click on the search button. The results would be displayed in a list. </string>
    <string name="aboutHelp">This is the information about this app and the author</string>
    <string name="favHelp">Input the ingredient you want to search in favorite and click on the filter button. The results would be displayed in list. Long click can delete it from favorite.</string>
    <string name="favDetailHelp">Click the heart button to delete the recipe from your favorite</string>
    <string name="searchDetailHelp">Click the heart button to add the recipe to your favorite</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="about_me_title">About me</string>
    <string name="about_body">This application, developed as the culmination of CST2335 by Mohamed Attia, \n\nThe app is for recipe searching.
        By entering an ingredient in the search bar, it will generate the search result. You can add it to your favorite for later use. The app has also an about me page
        as well as help to guide the use of the app.</string>
    <string name="search_title">Search</string>
    <string name="fav_title">My Favorite</string>
    <string name="about_title">Information</string>
    <string name="detail_title">Recipe</string>
    <string name="search_hint">Search by ingredient</string>
    <string name="favSearchHint">Search in my favourite</string>
    <string name="favSearchButton">Filter</string>
    <string name="homeToast">You\'re at home!</string>
    <string name="searchToast">You\'re searching!</string>
    <string name="favToast">I\'m your favorite!</string>
    <string name="aboutToast">You\'re in the information page!</string>
    <string name="lastSearchPrompt">Your last search is: </string>
    <string name="firstSearchPrompt">Start a new search!</string>
    <string name="favLastSearchPrompt">Your last search in favorite is: </string>
    <string name="favFirstSearchPrompt">Welcome to your first search in favorite!</string>
    <string name="favSearchCount"> Result(s) found in your favorite!</string>
    <string name="favAdded">Added to Favorites</string>
    <string name="favRemoved">Removed from Favorites</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_fav">Favorite</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_aboutme">About me</string>
    <string name="search_name">Lookup</string>
    <string name="save_name">Save Location</string>
    <string name="view_name">View Favorites</string>
    <string name="welcome">Welcome!</string>
    <string name="search_bar">Search for Artist/Song Here</string>
    <string name="welcome_msg">Welcome to Deezer</string>
    <string name="search">Search</string>
    <string name="preview">Preview Song</string>
    <string name="add_playlist">Add to Playlist</string>
    <string name="playlist_toolbar">Your Deezer Playlist</string>
    <string name="Insert_word">Insert a word</string>
    <string name="Search">Seach</string>
    <string name="About">About</string>
    <string name="Word_List">Word List</string>
    <string name="delete_confirmation">Do you want to delete this word?</string>
    <string name="delete_title">Delete Message</string>
    <string name="positive_button_yes">Yes</string>
    <string name="negative_button_no">No</string>
    <string name="undo_action">Undo</string>
    <string name="message_deleted">Message deleted</string>
    <string name="word_saved_notification">Word saved to your word list: </string>
    <string name="no_word_selected">No word selected to save</string>
    <string name="how_to_use_title">How to Use</string>
    <string name="how_to_use_message">To use this dictionary app, simply enter a word in the search
        bar at the top and press the Search button. The app will display definitions fetched from
        the online dictionary. \n\nIf you wish to save a word and its definitions for later review,
        you can click on the Save button after searching for a word. Your saved words can be
        accessed in the Word List section.</string>
    <string name="ok_button">OK</string>

</resources>

