<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar" />

    <ListView
        android:id="@+id/recipeListView"
        style="@android:style/Widget.DeviceDefault.ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/recipeOptionsContainer"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="0dp"
        android:tag="@string/recipeSearchEditText" />



    <LinearLayout
        android:id="@+id/recipeOptionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <ProgressBar
            android:id="@+id/recipeSearchProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/search_hint" />

            <Button
                android:id="@+id/recipeSearchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/recipeSearchButtonText" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>